--- a/roles/template/templates/vpc.j2
+++ b/roles/template/templates/vpc.j2
@@ -16,7 +16,7 @@
         {% if running > 0 %}
             </div>
         {% endif %}
-        <div class="instances_stopped"><i class="fas fa-circle-stop">{{ stopped }} stopped ({{ total }} total)</div>
+        <div class="instances_stopped"><i class="fas fa-circle-stop"></i>{{ stopped }} stopped ({{ total }} total)</div>
     {% endif %}
 </div></h3>
 <div class="net_content">
