--- a/roles/build_report_tags/templates/footer.j2
+++ b/roles/build_report_tags/templates/footer.j2
@@ -1,8 +1,7 @@
 <center>
-<p>This report was created by the <a href="https://cloud.lab.ansible.io/" style="color:#ffffff">Ansible Content Lab for Cloud.</a><br><br>
+<p>This report was created by the <a href="https://github.com/ansible-cloud/aws_demos" style="color:#ffffff">Ansible Cloud GitHub organization</a><br><br>
 If you are new to Ansible Automation check out the following links:<br>
-<a href="https://www.redhat.com/en/engage/redhat-ansible-automation-202108061218">Self Paced Labs</a><br>
-<a target="_blank" href="https://ansible.com/workshops">Free hands-on workshops</a><br>
-<a href="https://youtube.com/ansibleautomation">Youtube Videos</a><br>
+<a href="https://www.redhat.com/en/engage/redhat-ansible-automation-202108061218">👆🏻 Interactive labs for Red Hat Ansible Automation Platform</a><br>
+<a href="https://youtube.com/ansibleautomation">🎥 Ansible Official YouTube</a><br>
 </p>
 </center>
