--- a/roles/build_report_tags/templates/header.j2
+++ b/roles/build_report_tags/templates/header.j2
@@ -4,7 +4,7 @@
         <a href="https://ansible.com">
           <img
             class="header-logo"
-            src="https://www.ansible.com/hubfs/Logo-Red_Hat-Ansible-A-Reverse-SVG.svg"
+            src="ansible-logo.svg"
             title="Red Hat Ansible"
             alt="Red Hat Ansible"
           />
