build_report_tags: fix SVG logo, add UTF-8 meta, clean footer emojis

--- a/roles/build_report_tags/templates/footer.j2
+++ b/roles/build_report_tags/templates/footer.j2
@@ -1,7 +1,7 @@
 <center>
 <p>This report was created by the <a href="https://github.com/ansible-cloud/aws_demos" style="color:#ffffff">Ansible Cloud GitHub organization</a><br><br>
 If you are new to Ansible Automation check out the following links:<br>
-<a href="https://www.redhat.com/en/engage/redhat-ansible-automation-202108061218">👆🏻 Interactive labs for Red Hat Ansible Automation Platform</a><br>
-<a href="https://youtube.com/ansibleautomation">🎥 Ansible Official YouTube</a><br>
+<a href="https://www.redhat.com/en/engage/redhat-ansible-automation-202108061218">🖱️ Interactive labs for Red Hat Ansible Automation Platform</a><br>
+<a href="https://youtube.com/ansibleautomation">🎬 Ansible Official YouTube</a><br>
 </p>
 </center>
